--- a/strona-7.html
+++ b/strona-7.html
@@ -69,6 +69,8 @@
                 </li>
             </ul>
         </nav>
+        <h2>Fantastyczny wiatrak</h2>
+<img src="obraz.jpg" alt="obraz olejny" style="width:304px;height:228px;">
     </header>
     <article>
         <header>
