--- a/strona-4.html
+++ b/strona-4.html
@@ -72,6 +72,10 @@
     </header>
     <article>
         <header>
+          <p class="txt">
+            <img scr="obrazek.jpg" alt="">
+
+          </p>
             <h2>article header</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec.</p>
         </header>
