zmiana wymiarow obrazka

--- a/strona-4.html
+++ b/strona-4.html
@@ -73,7 +73,7 @@
     <article>
         <header>
           <p class="txt">
-            <img scr="obrazek.jpg" alt="">
+            <img scr="obrazek.jpg" alt="" height="300" width="300">
 
           </p>
             <h2>article header</h2>
