--- a/strona-9.html
+++ b/strona-9.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>asdasdas</title>
+    <title>asdasdas as da sd asd</title>
     <meta name="description" content="">
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/main.css">
