--- a/strona-7.html
+++ b/strona-7.html
@@ -132,7 +132,9 @@ tr:nth-child(even) {
     <td>Italy</td>
   </tr>
 </table>
-
+<canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;">
+tutaj jest tekst
+</canvas>
     </header>
     <article>
         <header>
